--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,14 +2,14 @@ name: goreleaser
 
 on:
   push:
-    # run only against tags
+    branches:
+      - 'master'
     tags:
-      - '*'
+      - 'v*'
+  pull_request:
 
 permissions:
   contents: write
-  # packages: write
-  # issues: write
 
 jobs:
   goreleaser:
@@ -28,6 +28,14 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.18
+      -
+        name: Cache Go modules
+        uses: actions/cache@v1
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
